# FXSound_For_Linux

./: .SRCINFO  .gitignore  BAZZITE_FIX.md  CHANGELOG.md  CLEANUP_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STEPS.md  DEPLOYMENT_SUMMARY.md  DISTRIBUTION_SUMMARY.md  FLATHUB_SUBMISSION.md  FLATPAK_TEST_RESULTS.md  INSTALL.md  INTEGRATION_STATUS.md  MIGRATION_STATUS.md  PKGBUILD  PROJECT_STRUCTURE.md  QUICK_DEPLOY.md  QUICK_START.md  README.md  READY_TO_SUBMIT.md  TAURI_COMMANDS.js  VERSION.md  com.fxsound.linux.yml  fix_home_end.cjs  fxsound-hosting-guide.md  fxsound-linux.jsx  index.html  package-lock.json  package.json  plan.txt  pnpm-lock.yaml  snapcraft.yaml  verify.py  verify_sliders.py
.Jules/: palette.md
.github/workflows/: release.yml
.jules/: bolt.md  palette.md  sentinel.md
docs/: AUDIO_IMPLEMENTATION.md  BAZZITE_SETUP.md  COMPLETE_SUMMARY.md  DISTRIBUTION_GUIDE.md  MIGRATION_PLAN.md  MIGRATION_STATUS.md  README.md  SCREENSHOT_GUIDE.md  TESTING_AND_DISTRIBUTION.md  VERSION_UPDATE.md
scripts/: README.md  bazzite-setup.sh  build-release.sh  setup-audio.sh  setup-deps.sh  show-clean-summary.sh  show-guide.sh  take-screenshots.sh  test-audio.sh  test-locally.sh  verify-version.sh  version-info.sh
src/: App.jsx  audioEngine.js  constants.js  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  lib.rs
src/components/: EQBand.jsx  EffectSlider.jsx  Visualizer.jsx
