[package]
name = "fxsound-linux"
version = "1.0.0"
description = "Audio enhancer for Linux with 10-band EQ and effects"
authors = ["FXSound Linux Contributors"]
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/fxsound-linux"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
libpulse-binding = "2.28"
libpulse-simple-binding = "2.28"
rustfft = "6.2"
